Merging build and test updates from 2.2.27 branch. Updating sample maven settings file to reflect the merging of profiles into the project parent pom.